--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -40,9 +40,23 @@
   <dt>
     Image
   </dt>
+  
   <dd>
     <img src="<%= @movie.image_url %>" width="320">
   </dd>
+  <dt>
+    Director
+  </dt>
+  <dd>
+    <%= @director.name %>
+  </dd>
+
+  <dt>
+    Number of characters
+  </dt>
+  <dd>
+    
+  </dd>  
 
 </dl>
 
