--- a/app/views/director_templates/show.html.erb
+++ b/app/views/director_templates/show.html.erb
@@ -36,6 +36,13 @@
   <dd>
     <img src="<%= @director.image_url %>" width="320">
   </dd>
+  
+  <dt>
+    Number of films
+  </dt>
+  <dd>
+    <%= @movie_count %>
+  </dd>
 
 </dl>
 
@@ -48,3 +55,79 @@
 <a href="/directors">
   Go back
 </a>
+
+<div class="card mt-3 mb-5">
+  <div class="card-header">
+    Filmography
+  </div>
+  <% @movies.each do |movie| %>
+  <ul class="list-group">
+      <li class="list-group-item">
+        <a href="/movies/<%= movie.id %>"><%= movie.title %></a>
+        (1941)
+      </li>
+  </ul>
+  <% end %>
+    
+  <div class="card-header">
+    Add a new movie for this director
+  </div>
+  <ul class="list-group">
+    <li class="list-group-item">
+      <form action="/create_movie" >
+        <!-- Label and input for title -->
+        <div class="form-group">
+          <label for="title">
+            Title
+          </label>
+
+          <input type="text" id="title" name="title" class="form-control">
+        </div>
+
+        <!-- Label and input for year -->
+        <div class="form-group">
+          <label for="year">
+            Year
+          </label>
+
+          <input type="text" id="year" name="year" class="form-control">
+        </div>
+
+        <!-- Label and input for duration -->
+        <div class="form-group">
+          <label for="duration">
+            Duration
+          </label>
+
+          <input type="text" id="duration" name="duration" class="form-control">
+        </div>
+
+        <!-- Label and input for description -->
+        <div class="form-group">
+          <label for="description">
+            Description
+          </label>
+
+          <textarea id="description" name="description" class="form-control" rows="3"></textarea>
+        </div>
+
+        <!-- Label and input for image_url -->
+        <div class="form-group">
+          <label for="image_url">
+            Image url
+          </label>
+
+          <input type="text" id="image_url" name="image_url" class="form-control">
+        </div>
+
+        <!-- Label and input for director_id -->
+        <input type="hidden" name="director_id" value="<%= @director.id %>">      
+
+        <button class="btn btn-block btn-outline-secondary">
+          Create movie
+        </button>
+      </form>
+    </li>
+  </ul>
+</div>
+
