--- a/app/views/movie_templates/new_form.html.erb
+++ b/app/views/movie_templates/new_form.html.erb
@@ -50,6 +50,13 @@
     <input type="text" id="image_url" name="image_url" class="form-control">
   </div>
 
+  <div class="form-group">
+    <label for="director">
+      Director
+    </label>
+    <%= select_tag("director_id", options_from_collection_for_select(Director.all, :id, :name, @movie.try(:director_id)), :class => "form-control") %>
+  </div> 
+
   <button class="btn btn-block btn-outline-secondary">
     Create movie
   </button>
