--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -69,3 +69,49 @@
 <a href="/movies">
   Go back
 </a>
+
+<div class="card mt-3 mb-5">
+  <div class="card-header">
+    Cast
+  </div>
+  <% @characters.each do |character| %>
+  <ul class="list-group">
+      <li class="list-group-item">
+        <a href="/actors/<%= character.actor_id %>"><%= Actor.find_by(id: character.actor_id).name %></a>
+        (<%= character.name %>)
+      </li>
+  </ul>
+  <% end %>
+
+  <div class="card-header">
+    Add a new character for this movie
+  </div>
+  <ul class="list-group">
+    <li class="list-group-item">
+      
+      <form action="/create_character" method="post">
+
+  <div class="form-group">
+    <label for="actor_id">
+      Actor
+    </label>
+
+    <%= select_tag("actor_id", options_from_collection_for_select(Actor.all, :id, :name, @character.try(:actor_id)), :class => "form-control") %>
+
+     or <a href="/actors/new">add a new actor</a> first
+  </div>
+
+  <div class="form-group">
+    <label for="name">
+      Name
+    </label>
+
+    <input type="text" id="name" name="name" class="form-control">
+  </div>
+  
+  <input type="hidden" name="movie_id" value="<%= @movie.id %>">  
+
+  <button class="btn btn-block btn-outline-secondary">
+    Create character
+  </button>
+</form>
